<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".ui.PortfolioActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    android:layout_margin="5dp"
    android:shrinkColumns="0"
    android:stretchColumns="1">
    <TableRow>
        <TextView style="@style/EmailLabel"
            android:text="@string/SendToEmail"/>
        <EditText style="@style/EmailText"
            android:id="@+id/SendTo"
            android:text="@string/TejalEmailSend"/>
    </TableRow>

    <TableRow>
        <TextView style="@style/EmailLabel"
            android:text="@string/EmailSubject"/>
        <EditText style="@style/EmailText"
            android:id="@+id/Subject"
            android:text="@string/SubjectJoinList"/>
    </TableRow>

    <TableRow>
        <TextView style="@style/EmailLabel"
            android:text="@string/EmailMessage"/>
        <EditText style="@style/EmailText"
            android:id="@+id/Message"
            android:inputType="textMultiLine"
            android:lines="2"
            android:minLines="1"
            android:gravity="top|left"
            android:maxLines="5"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:scrollbars="vertical"
            android:maxLength ="50"
            android:text="@string/EmailBody"
            android:scrollHorizontally="false"/>
    </TableRow>
    <Button
        android:id="@+id/SendEmailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SendEmailButtonText"
        android:paddingTop="10dp"/>
</TableLayout>

</LinearLayout>